participants reports alignment fixed (style pending)

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -59,7 +59,8 @@
             <span class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Reports</a>
                 <div class="dropdown-menu">
-                    <span class="dropdown-item" th:replace="::menuItem ('/reporter/projects','projects','Projects report','search','Projects report')"></span>
+                    <span class="dropdown-item" th:replace="::menuItem ('/reporter/projects','projects','Projects & specifications','search','Projects & specifications')"></span>
+                    <span class="dropdown-item" th:replace="::menuItem ('/reporter/participants','projects','Projects & participants','search','Projects & participants')"></span>
                     <span class="dropdown-item" th:replace="::menuItem ('/','apierrors','todo','search','Wrong defined APIs (todo)')"></span>
 <!--                    <div class="dropdown-divider"></div>-->
 <!--                    <a class="dropdown-item" href="#">Separated link</a>-->
