--- a/src/main/resources/templates/reporter/specs.html
+++ b/src/main/resources/templates/reporter/specs.html
@@ -29,7 +29,7 @@
             <table class="table table-sm table-responsive table-hover" style="max-width: 100%;" th:if="${not #lists.isEmpty(specs.specs)}">
                 <thead class="thead-dark">
                     <tr>
-                        <th colspan="6">Specification list (<span th:text="${specs.numberOfSpec}">0</span>)</th>
+                        <th colspan="6">Specifications (<span th:text="${specs.numberOfSpec}">0</span>)</th>
                     </tr>
                     <tr>
                         <th scope="col">Type</th>
