--- a/src/main/resources/templates/reporter/wrongreference.html
+++ b/src/main/resources/templates/reporter/wrongreference.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="panel panel-heading">
                 <h3>Specification wrong refereces (<span th:text="${wrongreference.getTotal()}">0</span>)</h3>
-                <p>This specifications are using local file reference in it's definition</p>
+                <p>This specifications are using local file reference in its definition</p>
             </div>
         </div>
     
