--- a/src/main/resources/templates/reporter/specs.html
+++ b/src/main/resources/templates/reporter/specs.html
@@ -35,10 +35,8 @@
                         <th scope="col">Type</th>
                         <th scope="col">Title</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Version</th>
+                        <th scope="col">Default version</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Created</th>
-                        <th scope="col">Updated</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -48,8 +46,6 @@
                         <td th:text="${s.specName}">Api name</td>
                         <td th:text="${s.specVersion}">Api version</td>
                         <td th:text="${s.specDescription}">Api description</td>
-                        <td th:text="${s.created}">Api creation date-time</td>
-                        <td th:text="${s.updated}">Api update date-time</td>
                     </tr>
                     <tr th:remove="all">
                         <td th:text="${s.specType}">Api type</td>
@@ -57,8 +53,6 @@
                         <td th:text="${s.specName}">Api name</td>
                         <td th:text="${s.specVersion}">Api version</td>
                         <td th:text="${s.specDescription}">Api description</td>
-                        <td th:text="${s.created}">Api creation date-time</td>
-                        <td th:text="${s.updated}">Api update date-time</td>
                     </tr>
                     <tr th:each="s : ${specs.specs}">
                         <td th:text="${s.specType}">DOMAIN</td>
@@ -66,8 +60,6 @@
                         <td><a th:href="'/reporter/specs/'+ ${s.id}" th:text="${s.specName}" /></td>
                         <td th:text="${s.specVersion}">3.2.0</td>
                         <td th:text="${s.specDescription}">Api description: Lorem...</td>
-                        <td th:text="${s.created}">14-03-1976T22:22:22Z</td>
-                        <td th:text="${s.updated}">14-03-1976T22:22:22Z</td>
                     </tr>
                 </tbody>
                 <tfoot>
